--- a/sass/layout/_hero.sass
+++ b/sass/layout/_hero.sass
@@ -1,7 +1,6 @@
 .hero
     background: linear-gradient(to right, $primary, $secondary)
     color: $text-inverse
-    padding-top: 8em
-    padding-bottom: 8em
     height: 100vh 
-    text-align: center
+    display: flex
+    align-items: center
